about alignment fixed for images

--- a/src/App.css
+++ b/src/App.css
@@ -145,6 +145,11 @@ width: 100px;
   .ms-5 {
     margin-left: 0 !important;
   }
+  .about_image img {
+    border-radius: 35px;
+    width: auto;
+    margin-left: 0 !important;
+  }
 }
 @media (min-width: 412px) {
     form input {
@@ -202,6 +207,11 @@ width: 100px;
   .ms-5 {
     margin-left: 0 !important;
   }
+  .about_image img {
+    border-radius: 35px;
+    width: auto;
+    margin-left: 0 !important;
+  }
 }
 
 
@@ -248,6 +258,11 @@ width: 100px;
   .ms-5 {
     margin-left: 0 !important;
   }
+  .about_image img {
+    border-radius: 35px;
+    width: auto;
+    margin-left: 0 !important;
+  }
 }
 @media (min-width: 600px) {
     form input {
@@ -290,6 +305,11 @@ width: 100px;
   .ms-5 {
     margin-left: 3rem !important;
   }
+  .about_image img {
+    border-radius: 35px;
+    width: auto;
+    margin-left: 0 !important;
+  }
 }
 @media (min-width: 768px) {
     form input {
@@ -325,6 +345,11 @@ width: 100px;
   }
   .contact_img img{
     width: 550px;
+  }
+  .about_image img {
+    border-radius: 35px;
+    width: auto;
+    margin-left: 0 !important;
   }
 }
 @media (min-width: 810px) {
@@ -366,6 +391,11 @@ width: 100px;
   .ms-5 {
     margin-left: 3rem !important;
   }
+  .about_image img {
+    border-radius: 35px;
+    width: auto;
+    margin-left: 0 !important;
+  }
 }
 @media (min-width: 1004px) {
     form input {
@@ -402,6 +432,11 @@ width: 100px;
   }
   .contact_img img{
     width: 750px;
+  }
+  .about_image img {
+    border-radius: 35px;
+    width: auto;
+    margin-left: 1rem !important;
   }
 }
 @media (min-width: 1024px) {
@@ -456,6 +491,11 @@ width: 100px;
   }
   .ms-5 {
     margin-left: 3rem !important;
+  }
+  .about_image img {
+    border-radius: 35px;
+    width: auto;
+    margin-left: 1rem !important;
   }
 }
 @media (min-width: 1440px) {
